tests/machine/x/kotlin/left_join.error
line 68:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/left_join.kt:68:68: error: unresolved reference: c
        __res.add(mutableMapOf("orderId" to o["id"], "customer" to c, "total" to o["total"]))
                                                                   ^
/workspace/mochi/tests/machine/x/kotlin/left_join.kt:76:39: error: unresolved reference: orderId
        println(listOf("Order", entry.orderId, "customer", entry.customer, "total", entry.total).joinToString(" "))
                                      ^
/workspace/mochi/tests/machine/x/kotlin/left_join.kt:76:66: error: unresolved reference: customer
        println(listOf("Order", entry.orderId, "customer", entry.customer, "total", entry.total).joinToString(" "))
                                                                 ^
/workspace/mochi/tests/machine/x/kotlin/left_join.kt:76:91: error: unresolved reference: total
        println(listOf("Order", entry.orderId, "customer", entry.customer, "total", entry.total).joinToString(" "))
                                                                                          ^

 67:     for (o in orders) {
 68:         __res.add(mutableMapOf("orderId" to o["id"], "customer" to c, "total" to o["total"]))
 69:     }
